--- a/yimi/public/assets/fonts/demo_fontclass.html
+++ b/yimi/public/assets/fonts/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-shuangjiantou"></i>
+                    <div class="name">双箭头</div>
+                    <div class="fontclass">.icon-shuangjiantou</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-facebook"></i>
                     <div class="name">facebook</div>
                     <div class="fontclass">.icon-facebook</div>
