--- a/yimi/public/assets/fonts/demo_symbol.html
+++ b/yimi/public/assets/fonts/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-shuangjiantou"></use>
+                    </svg>
+                    <div class="name">双箭头</div>
+                    <div class="fontclass">#icon-shuangjiantou</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-facebook"></use>
                     </svg>
                     <div class="name">facebook</div>
