--- a/yimi/public/assets/fonts/demo_unicode.html
+++ b/yimi/public/assets/fonts/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6a3;</i>
+                    <div class="name">双箭头</div>
+                    <div class="code">&amp;#xe6a3;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe638;</i>
                     <div class="name">facebook</div>
                     <div class="code">&amp;#xe638;</div>
